scrollbar fixed

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,10 +3,15 @@
 *::after {
   box-sizing: border-box;
 }
+
+html {
+  overflow-x: hidden;
+}
 body {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  width: 100vw;
 }
 
 .hero::before {
@@ -64,6 +69,7 @@ body {
   position: absolute;
   margin: 2%;
   padding: 2%;
+  padding-bottom: 0.5rem;
   text-align: center;
   min-height: 70%;
   transform: translate(-50%, -50%);
